--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   <body>
     <h1>Lorem ipsum dolor sit amet.</h1>
 	<h2>Updated Code</h2>
+	<h3>Updated Code</h3>
+	<h4>Updated Code</h4>
   </body>
 </html>
